# roadgateway

./: .eslintrc.json  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
roadgateway_core/: __init__.py
roadgateway_core/gateway/: __init__.py  request.py  server.py
roadgateway_core/health/: __init__.py  checker.py  readiness.py
roadgateway_core/loadbalancing/: __init__.py  balancer.py  health.py  pool.py
roadgateway_core/metrics/: __init__.py  collector.py  exporter.py
roadgateway_core/middleware/: __init__.py  base.py  cors.py  logging.py  transform.py
roadgateway_core/plugins/: __init__.py  base.py  loader.py
roadgateway_core/proxy/: __init__.py  circuit_breaker.py  forwarder.py  retry.py
roadgateway_core/ratelimit/: __init__.py  algorithms.py  limiter.py  middleware.py
roadgateway_core/routing/: __init__.py  matcher.py  router.py
roadgateway_core/security/: __init__.py  acl.py  auth.py  jwt.py  oauth.py
roadgateway_core/utils/: __init__.py  config.py  helpers.py
src/: index.ts
src/__tests__/: gateway.test.ts  metrics.test.ts
src/middleware/: auth.ts  rate-limiter-advanced.ts  rate-limiter.ts
src/routes/: index.ts
tests/: __init__.py  test_gateway.py  test_loadbalancing.py  test_ratelimit.py  test_security.py
